[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/map/Cave.png" type="Texture" id=1]
[ext_resource path="res://scripts/MapItem.gd" type="Script" id=2]
[ext_resource path="res://sprites/map/CaveHover.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.134, 80.5423 )

[node name="Cave" type="Area2D"]
script = ExtResource( 2 )
scene = "res://scenes/levels/Cave.tscn"
default_sprite = ExtResource( 1 )
hover_sprite = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteNode" type="Sprite" parent="."]
position = Vector2( 0, -16.054 )
texture = ExtResource( 1 )
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
